@@ -1,23 +1,34 @@
 ---
-abstract: Perl interface to CMIS-compliant document management systems
+abstract: 'Perl interface to CMIS-compliant document management systems'
 author:
   - 'Michael Daum <daum@michaeldaumconsulting.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::Class: 0
+  Test::DistManifest: 0
+  Test::Pod: 0
+  Test::Pod::Coverage: 0
+  Test::Signature: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.92'
-license: perl
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.57_05'
+license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: WebService-Cmis
 no_index:
   directory:
-    - inc
     - t
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.02
+    - inc
+requires:
+  Error: 0
+  File::MMagic: 0
+  LWP::UserAgent: 0
+  REST::Client: 0
+  URI: 0
+  XML::LibXML: 0
+  perl: 5.012001
+version: 0.04
