@@ -1,7 +1,12 @@
 Revision history for WebService-Cmis:
 
+2012-09-20 MichaelDaum <github@michaeldaumconsulting.com>
+
+	 * added ticket-based authentication
+
 2012-09-11 MichaelDaum <github@michaeldaumconsulting.com>
 
+	 * fixing (build)/prerequisites
 	 * skip all server tests when none is configured
 
 2012-08-31 MichaelDaum <github@michaeldaumconsulting.com>
